--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head lang='en'>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width'>
-	<title>rollup-starter-app</title>
+	<title>three D tetris</title>
 
 	<style>
 		body {
@@ -14,8 +14,22 @@
 	</style>
 </head>
 <body>
-	<h1>rollup-starter-app</h1>
-	<p>The time is <span id='time-now'>...</span></p>
+	
+	<div id="container">
+		<div id="start-container">
+			<div>
+				<p>click & drag to change perspective</p>
+				<p>&nbsp;&nbsp;&nbsp;&nbsp;...scrool to zoom</p>
+				<p>&nbsp;&nbsp;&nbsp;&nbsp;...right click to pan</p>
+				<p>🔼 Move blocks with arrows</p>
+				<p>🔄 Rotate: ASD</p>
+				<p>👇 Drop one block down: F</p>
+				<p>😡 Get new piece: G</p>
+				<p>🎮 Toggle pause and this message: Space</p>
+			</div>
+		</div>
+	</div>
+
 	<script src='bundle.js'></script>
 </body>
 </html>
