--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 	<div id="container">
 		<div id="start-container">
 			<div>
-				<p>click & drag to change perspective</p>
+				<p>hei, click & drag to change perspective</p>
 				<p>&nbsp;&nbsp;&nbsp;&nbsp;...scrool to zoom</p>
 				<p>&nbsp;&nbsp;&nbsp;&nbsp;...right click to pan</p>
 				<p>🔼 Move blocks with arrows</p>
